--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,3 +12,42 @@
     font-size: 50px !important;
 }
 */
+
+/* page transition */
+.page-enter-active {
+    animation: acrossIn .20s ease-out both;
+  } 
+  .page-leave-active {
+    animation: acrossOut .20s ease-in both;
+  } 
+  @keyframes acrossIn {
+    0% {
+      transform: translate3d(-100%, 0, 0);
+    }
+    100% {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  @keyframes acrossOut {
+    0% {
+      transform: translate3d(0, 0, 0);
+    }
+    100% {
+      transform: translate3d(100%, 0, 0);
+    }
+}
+
+/*
+.page-enter-active {
+    transition: opacity 0.25s ease-out;
+  }
+  
+  .page-leave-active {
+    transition: opacity 0.25s ease-in;
+  }
+  
+  .page-enter,
+  .page-leave-active {
+    opacity: 0;
+  }
+*/
