added content to index, adding to about

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -10089,7 +10089,7 @@ max-width: 480px
     width: 100%; } }
 
 .stats {
-  background: url(../images/stats_bg.jpg) no-repeat center;
+  background: url(../images/cohotek-web-project.png) no-repeat center;
   background-size: cover;
   position: relative; }
 
