--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -51,3 +51,21 @@
     opacity: 0;
   }
 */
+
+/*pc - hide img on mobile view*/ 
+@media(max-width:1024px) {
+   
+	.hide-mobile{
+	display: none !important;
+	}
+
+  }
+
+
+  .custom-margin{
+    margin-top:-45px;
+  }
+
+  .custom-hover:hover{
+    background-color: #0c3866;
+  }
