fnished static issues

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -10181,7 +10181,7 @@ button.owl-prev span:hover {
   -o-transition: .3s ease; }
 
 .ratings span.fa {
-  color: #2e9cca; }
+  color: gold; }
 
 /*-- //testimonials --*/
 /*-- about --*/
